package eapli.base.meetingsManagement.repositories;

import eapli.base.meetingsManagement.domain.Meeting;
import eapli.framework.domain.repositories.DomainRepository;

public interface MeetingRepository extends DomainRepository<Long, Meeting> {
}
